--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .root {
+      background-color: hsl(225, 100%, 94%);
+      height: 100vh;
+      background-image: url("images/pattern-background-desktop.svg");
+      background-repeat: no-repeat;
+    }
+    @media only screen and (max-width: 480px) {
+      .root {
+        background-image: url("images/pattern-background-mobile.svg");
+      }
+    }
+
   </style>
 </head>
 <body>
+<div class="root">
 
-  Order Summary
+</div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
 
-  Annual Plan
-  $80.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
+  
+  
 </body>
 </html>
