include container/picture

--- a/index.html
+++ b/index.html
@@ -16,23 +16,35 @@
       background-image: url("images/pattern-background-desktop.svg");
       background-repeat: no-repeat;
     }
+    
     @media only screen and (max-width: 480px) {
       .root {
         background-image: url("images/pattern-background-mobile.svg");
       }
     }
+  .container {
+    background-color: white;
+    height: 60vh;
+    border: 1cm;
 
+  }
   </style>
 </head>
 <body>
 <div class="root">
-
+  <div class="container">
+    <img src= "/images/illustration-hero.svg">
+  <div class="text-content">
+    <div class="title">
+      <h2>Order Summary</h2>
+    </div>
+  </div>
+</div>
 </div>
 
 
   
   
-  
-  
+ 
 </body>
 </html>
