--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       height: 100vh;
       background-image: url("images/pattern-background-desktop.svg");
       background-repeat: no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     
     @media only screen and (max-width: 480px) {
@@ -24,21 +27,67 @@
     }
   .container {
     background-color: white;
-    height: 60vh;
-    border: 1cm;
-
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: fit-content;
   }
+  .border-radius {
+    border-radius: 10px;
+  }
+  .content-text {
+    font-size: 14px;
+    color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .text-content {
+    display: flex ;
+    align-items: center;
+    flex-direction: column;
+  }
+  .content-text p {
+    padding: 6px;
+    text-align: center;
+  }
+  .foot-card{
+    display:flex;
+    align-items: center;
+    background-color: hsl(225, 100%, 98%);
+    padding: 6px;
+    border-radius: 10px;
+    width: 85%;
+    justify-content: space-around;
+  };
+
+
   </style>
 </head>
 <body>
 <div class="root">
-  <div class="container">
-    <img src= "/images/illustration-hero.svg">
+  <div class="container border-radius">
+    <img class="border-radius" src= "/images/illustration-hero.svg">
   <div class="text-content">
     <div class="title">
       <h2>Order Summary</h2>
     </div>
-  </div>
+    <div class="content-text">
+      <p>While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.
+        Copyright 1999-2022 by Refsnes Data. All Rights Reserved.</p>
+    </div>
+    <div class="foot-card">
+      <span class="foot-svg-container">
+        <img src= "/images/icon-music.svg">
+      </span>
+      <div class="foot-text-container">
+        <h3 class="foot-title">Annual Plan</h3>
+        <p class="foot-text">£89.99 year</p>
+      </div>
+
+      <a class="foot-link">Change</a>
+    </div>
 </div>
 </div>
 
