--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
       <h2>Order Summary</h2>
     </div>
     <div class="content-text">
-      <p>While using this site, you agree to have read and accepted our terms of use, cookie and privacy policy.
-        Copyright 1999-2022 by Refsnes Data. All Rights Reserved.</p>
+      <p>You can now listen to millions of songs, audiobooks, and podcast on any device anywhere you like!</p>
     </div>
     <div class="foot-card">
       <span class="foot-svg-container">
@@ -86,10 +85,13 @@
         <p class="foot-text">£89.99 year</p>
       </div>
 
-      <a class="foot-link">Change</a>
+      <a href="#" class="foot-link">Change</a>
     </div>
+    <a href="#" class="proceed-button">Proceed to Payment</a>
+    <a href="#" class="cancel-button">CancelOrder</a>
 </div>
 </div>
+
 
 
   
